--- a/foodOrderWebApp/src/main/resources/templates/item_added.html
+++ b/foodOrderWebApp/src/main/resources/templates/item_added.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>A-HA Food</title>
+    <title>Added New Item</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -41,19 +41,19 @@
                         <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
                     </li>
                     <div sec:authorize="isAnonymous()">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/login}">Log In</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/login}">Log In</a>
+                        </li>
                     </div>
                     <div sec:authorize="isAnonymous()">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/signup}">Create Account</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/signup}">Create Account</a>
+                        </li>
                     </div>
                     <div sec:authorize="isAuthenticated()">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/menu}">Menu</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/menu}">Menu</a>
+                        </li>
                     </div>
 
                     <div sec:authorize="hasAuthority('ADMIN')">
@@ -80,27 +80,22 @@
     </nav>
 </header>
 
-<!-- Begin page content -->
-<main class="container box">
-    <div class="row">
-        <div class="col-4">
-            <div class="card text-dark mb-3" style="margin-top: 200px" >
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Made Food With Love</h5>
-                        <p class="card-text">More than 10 years of experience in the food industry and considered as one of the top restaurants in the midwest region!</p>
-                    </div>
+<main class="container" style="margin-top: 200px">
+
+    <div class="d-flex justify-content-center text-success text-capitalize">
+        <h4> Food Item Added Successfully!</h4>
+    </div>
+    <div>
+        <div class="d-flex justify-content-center h-100">
+            <div class="card">
+                <div class="card-header">
+                    <h3>Please Click Below To View The Item List</h3>
+                </div>
+                <div class="card-body text-center" >
+                    <a th:href="@{/console/itemlist}">Link for Item List</a>
                 </div>
             </div>
         </div>
-
-        <div class="col-8">
-            <div class="container" style="margin-top: 100px; margin-left: 100px">
-                <img src="/img/g-1.jpg" class="rounded" alt="Food" width="700" height="500">
-            </div>
-
-        </div>
-
     </div>
 </main>
 
@@ -109,5 +104,10 @@
         <span class="text-muted"><i class="fas fa-copyright"></i> 2021 A-Ha Food</span>
     </div>
 </footer>
+
+
+<script src="/js/bootstrap.bundle.min.js"></script>
+
+
 </body>
 </html>
