--- a/foodOrderWebApp/src/main/resources/templates/login.html
+++ b/foodOrderWebApp/src/main/resources/templates/login.html
@@ -1,37 +1,24 @@
 <!doctype html>
-<html lang="en" class="h-100" xmlns:th="http://thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.thymeleaf.org http://www.thymeleaf.org
+  http://www.thymeleaf.org/thymeleaf-extras-springsecurity4 http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Log In</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sticky-footer-navbar/">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!--Bootsrap 4 CDN-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>LogIn</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!--Fontawesome CDN-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
-
-
-    <!-- Custom styles for this template -->
-    <link href="login.css" rel="stylesheet">
 </head>
 <body class="d-flex flex-column h-100">
 
@@ -39,38 +26,54 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{#}">A-HA FOOD</a>
+            <a class="navbar-brand" th:href="@{/}">A-HA FOOD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
+                        <div sec:authorize="isAuthenticated()">
+                            <a class="nav-link active" aria-current="page" th:href="@{/}">User: <span sec:authentication="name"></span> Privileges: <span sec:authentication="principal.authorities"></span></a>
+                        </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/login}">Log In</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/signup}">Create Account</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/menu}">Menu</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{#}">Special Offer</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" th:href="@{/userlist}">Show All Users</a></li>
-                            <li><a class="dropdown-item" th:href="@{fooditemlist}">Show All Food Items</a></li>
-                            <li><a class="dropdown-item" th:href="@{newfooditem}">Create New Food Item</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/logout}">Logout</a>
-                    </li>
+                    <div sec:authorize="isAnonymous()">
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/login}">Log In</a>
+                        </li>
+                    </div>
+                    <div sec:authorize="isAnonymous()">
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/signup}">Create Account</a>
+                        </li>
+                    </div>
+                    <div sec:authorize="isAuthenticated()">
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/menu}">Menu</a>
+                        </li>
+                    </div>
+
+                    <div sec:authorize="hasAuthority('ADMIN')">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Admin
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" th:href="@{/console/users}">Show Users</a>
+                                <a class="dropdown-item" th:href="@{/console/itemlist}">Manage Items</a>
+                            </div>
+                        </li>
+                    </div>
+
+                    <div sec:authorize="isAuthenticated()">
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/logout}">Logout</a>
+                        </li>
+                    </div>
+
                 </ul>
             </div>
         </div>
@@ -82,26 +85,36 @@
     <div>
         <div class="d-flex justify-content-center h-100">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header text-center">
                     <h3>Sign In</h3>
                 </div>
                 <div class="card-body">
-                    <form>
+                    <form th:action="@{/login/authenticate}" method="post">
+                        <div th:if="${param.error}" class="alert alert-error">
+                            Invalid username and password.
+                        </div>
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Username">
+                            <input type="text" name="username" class="form-control" placeholder="username">
                         </div>
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input type="password" name="password" class="form-control" placeholder="password">
                         </div>
 
-                        <div class="form-group">
-                            <input type="submit" value="Login" class="btn float-right login_btn">
+<!--                        <div class="form-group mx-auto">-->
+<!--                            <input type="submit" value="Login" class="btn btn-primary">-->
+<!--                        </div>-->
+
+                        <div class="input-group form-group">
+                            <div class="mx-auto">
+                                <input class="btn btn-primary" type="submit" value="Login">
+                                <input class="btn btn-secondary" type="button" value="Cancel" id="buttonCancel">
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -109,22 +122,27 @@
                     <div class="d-flex justify-content-center links">
                         Don't have an account? <a th:href="@{/signup}">Sign Up</a>
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
 </main>
 
-<footer class="footer mt-auto py-3 bg-light text-center ">
+<footer class="footer mt-auto py-3 bg-light text-center fixed-bottom">
     <div class="container">
         <span class="text-muted"><i class="fas fa-copyright"></i> 2021 A-Ha Food</span>
     </div>
 </footer>
 
-
 <script src="/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $("#buttonCancel").on("click", function (){
+            window.location="[[@{/index}]]";
+        });
+    });
+</script>
 </html>
