--- a/foodOrderWebApp/src/main/resources/templates/update_item.html
+++ b/foodOrderWebApp/src/main/resources/templates/update_item.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>A-HA Food</title>
+    <title>Update Item</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -41,19 +41,19 @@
                         <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
                     </li>
                     <div sec:authorize="isAnonymous()">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/login}">Log In</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/login}">Log In</a>
+                        </li>
                     </div>
                     <div sec:authorize="isAnonymous()">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/signup}">Create Account</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/signup}">Create Account</a>
+                        </li>
                     </div>
                     <div sec:authorize="isAuthenticated()">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/menu}">Menu</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/menu}">Menu</a>
+                        </li>
                     </div>
 
                     <div sec:authorize="hasAuthority('ADMIN')">
@@ -80,34 +80,40 @@
     </nav>
 </header>
 
-<!-- Begin page content -->
-<main class="container box">
-    <div class="row">
-        <div class="col-4">
-            <div class="card text-dark mb-3" style="margin-top: 200px" >
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Made Food With Love</h5>
-                        <p class="card-text">More than 10 years of experience in the food industry and considered as one of the top restaurants in the midwest region!</p>
-                    </div>
-                </div>
-            </div>
+
+<main class="container" style="margin-top: 200px">
+    <div class="d-flex justify-content-center">
+
+        <div>
+            <form class="row" th:action="@{/console/item_added}" th:object="${item}"
+                  method="POST">
+
+                <!-- Add hidden form field to handle update -->
+                <input type="hidden" th:field="*{itemId}" />
+
+                <input type="text" th:field="*{itemName}" class="form-control col-10">
+
+                <input type="text" th:field="*{itemDescription}" class="form-control col-10">
+
+                <input type="text" th:field="*{itemPrice}" class="form-control col-10">
+
+                <button type="submit" class="btn btn-dark col-3"> Update Food Item</button>
+            </form>
         </div>
-
-        <div class="col-8">
-            <div class="container" style="margin-top: 100px; margin-left: 100px">
-                <img src="/img/g-1.jpg" class="rounded" alt="Food" width="700" height="500">
-            </div>
-
-        </div>
-
     </div>
 </main>
+
+
 
 <footer class="footer mt-auto py-3 bg-light text-center fixed-bottom">
     <div class="container">
         <span class="text-muted"><i class="fas fa-copyright"></i> 2021 A-Ha Food</span>
     </div>
 </footer>
+
+
+<script src="/js/bootstrap.bundle.min.js"></script>
+
+
 </body>
 </html>
