--- a/foodOrderWebApp/src/main/resources/templates/users.html
+++ b/foodOrderWebApp/src/main/resources/templates/users.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>A-HA Food</title>
+    <title>User List</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -41,19 +41,19 @@
                         <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
                     </li>
                     <div sec:authorize="isAnonymous()">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/login}">Log In</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/login}">Log In</a>
+                        </li>
                     </div>
                     <div sec:authorize="isAnonymous()">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/signup}">Create Account</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/signup}">Create Account</a>
+                        </li>
                     </div>
                     <div sec:authorize="isAuthenticated()">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/menu}">Menu</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/menu}">Menu</a>
+                        </li>
                     </div>
 
                     <div sec:authorize="hasAuthority('ADMIN')">
@@ -80,28 +80,36 @@
     </nav>
 </header>
 
-<!-- Begin page content -->
-<main class="container box">
-    <div class="row">
-        <div class="col-4">
-            <div class="card text-dark mb-3" style="margin-top: 200px" >
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Made Food With Love</h5>
-                        <p class="card-text">More than 10 years of experience in the food industry and considered as one of the top restaurants in the midwest region!</p>
+<main class="container" style="margin-top: 200px">
+                    <div class="text-center">
+                        <h3>Users</h3>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-8">
-            <div class="container" style="margin-top: 100px; margin-left: 100px">
-                <img src="/img/g-1.jpg" class="rounded" alt="Food" width="700" height="500">
-            </div>
-
-        </div>
-
-    </div>
+                    <div>
+                        <table class="table table-hover table-responsive-xl">
+                            <thead class="thead-dark">
+                            <tr>
+                                <th>User ID</th>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>E-mail</th>
+                                <th>Role</th>
+                                <th>Action</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="user: ${users}">
+                                <td th:text="${user.userId}">User ID</td>
+                                <td th:text="${user.firstName}">First Name</td>
+                                <td th:text="${user.lastName}">Last Name</td>
+                                <td th:text="${user.email}">E-mail</td>
+                                <td th:text="${user.roles}">Role</td>
+                                <td>
+                                    <a th:href="@{/console/deleteUser/{id}(id=${user.userId})}">Delete</a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
 </main>
 
 <footer class="footer mt-auto py-3 bg-light text-center fixed-bottom">
@@ -109,5 +117,7 @@
         <span class="text-muted"><i class="fas fa-copyright"></i> 2021 A-Ha Food</span>
     </div>
 </footer>
+
+
 </body>
 </html>
